--- a/styles/index.css
+++ b/styles/index.css
@@ -7,41 +7,58 @@
   box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  font-family: "Roboto Slab", serif;
-}
-
 body {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Roboto Slab", serif;
   background-color: #F4F4F4;
   color: #333;
   line-height: 1.6;
 }
 
-
-
-
 .banner {
   background: url("../assets/imagenes/imagen1.png");
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   text-align: center;
-  color: #FFFFFF;
-  padding: 0 20px;
+  padding: auto;
+  background-color: #F4F4F4;
+  background-size: contain;
 }
 
-.footer {
-  background-color: #ffffff;
-  color: rgb(249, 98, 5);
-  text-align: center;
-  padding: 40px 0;
-  font-size: 15px;
+button {
+  background-color: #ffa75b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 100px;
+}
 
+footer {
+  background: #f47c20;
+  color: white;
+  padding: 40px 20px 20px;
+  text-align: center;
+}
+
+.footer-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.footer-columns div {
+  min-width: 150px;
+}
+
+footer h4 {
+  margin-bottom: 10px;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .copyright {
+  font-size: 0.9em;
+  margin-top: 20px;
 }
