--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
 * {
@@ -14,19 +13,55 @@ body {
   line-height: 1.6;
 }
 
-.banner {
-  background-image: url("../assets/imagenes/imagen1.png") /*no-repeat center center*/;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
-  /*padding: auto;
-  background-color: #F4F4F4;
-  background-size: contain;
-  justify-content:center;*/
+h1{
+  color: #f47c20;
+  font-size: 80px;
 }
 
+h3{
+  color: #f47c20;
+  font-size: 30px;
+}
+
+.banner {
+  background-image: url("../assets/imagenes/imagen1.png");
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-size: cover;
+}
+
+aside{
+  justify-content: flex-start;
+  display: flex;
+}
+
+.final{
+  background-image: url("../assets/imagenes/imagen4.png");
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-size: cover;
+}
+
+.text3{
+  width: 400px;
+  align-items: flex-start;
+  flex-direction: column;
+  display: flex;
+}
+
+
 button {
-  background-color: #ffa75b;
+  background-color: #f47c20;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -38,10 +73,57 @@ button {
 footer {
   background: #f47c20;
   color: white;
-  padding: 40px 20px 20px;
+  padding: 70px 50px 30px;
   text-align: center;
 }
+.banner2{
+  display: flex;
+  padding: 150px 150px 150px 135px;
+}
 
+.text{
+  margin: 20px 55px 0px 30px;
+  width: 40vw;
+}
+
+.text h3 {
+    color: #ff8a41;
+    font-size: 41px;
+    padding: 10px 0px 40px 0px;
+    line-height: 65px;
+}
+.text p {
+    line-height: 30px;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.644);
+    padding-bottom: 45px;
+}
+
+.banner3{
+  display: flex;
+  padding: 150px 150px 150px 135px;
+}
+
+.texto{
+  margin: 20px 55px 0px 30px;
+  width: 40vw;
+}
+
+.texto h3 {
+  color: #ff8a41;
+  font-size: 41px;
+  padding: 10px 0px 40px 0px;
+  line-height: 65px;
+}
+
+.texto p {
+  line-height: 30px;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.644);
+}
+
+
+ 
 .footer-columns {
   display: flex;
   flex-wrap: wrap;
@@ -58,10 +140,16 @@ footer h4 {
 }
 
 footer p {
-  margin: 0;
+  margin: 0.2em 0;
 }
 
 footer .copyright {
   font-size: 0.9em;
-  margin-top: 20px;
+  margin-top: 10em;
+}
+
+.fotrt{
+  text-align: center;
+  margin-top: 8em;
+  font-size: 0.9em;
 }
