--- a/styles/index.css
+++ b/styles/index.css
@@ -116,6 +116,12 @@ footer {
   width: 50%;
 }
 
+.footer-columns p,
+.footer-columns h4 {
+  cursor: pointer;
+}
+
+
 .imagen img, .image img {
   width: 100%;
   height: auto;
